--- a/index.html
+++ b/index.html
@@ -11,19 +11,52 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="name-highlight">Khaled</span> Website</h1>
+            <h1> <span class="orange-highlight">Khaled</span> Website</h1>
             <h3>World class professional web developer.</h3>
             <p>web developer ra ownk valo.ownk taka poisa kamay.valo life lead kore. marcidies benz use kore.
                 ownk desh e travel kore. valo valo jama kapor kine.
             </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>big Dream</h2>
+            <h3 orange-highlight> Become World's N0. 1 Developer</h3>
+            <p>i want to learn more. and learning is fun , so i will learn a lot . end of the day i will be best</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Wev Dev</h3>
+            <p>ami ownk kisu pari html, css, javascript,
+                ownk sundor design pari, animation add korte pari, bangla lehbo samne, aro ownk kisu korbo samne.
+            </p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>ami ownk kichu shikse karon jate, notun
+                kichu toiri korte pari design korte pari,
+                lekhte pari.porte pari aro ownk kisu jate korte pari, ta e shiksi.
+            </p>
+        </div>
+    </section>
+    <footer>
+        <p> @ khaled saifullah 2021, all wright reserved.</p>
+    </footer>
 
 </body>
 
