--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
     <footer>
-        <p> @ khaled saifullah 2021, all wright reserved.</p>
+        <p> @ khaled saifullah the best2021, all wright reserved.</p>
     </footer>
 
 </body>
